force-app/main/default/objects/Objective__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Decribe for which user objective is assigned for</description>
    <inlineHelpText>Choose user to assign an objective</inlineHelpText>
    <label>AssignedTo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>