force-app/main/default/objects/Objective__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>CASE(MONTH(TODAY()),12, DATE(YEAR(TODAY()) + 1, 1,1),DATE(YEAR(TODAY()),MONTH(TODAY()) + 1, 1))</defaultValue>
    <description>Shows when objective has to be done</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>