force-app/main/default/objects/Objective__c/validationRules/Non_Empty_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Empty_Name</fullName>
    <active>true</active>
    <errorConditionFormula>Name = NULL || LEN(Name) = 0</errorConditionFormula>
    <errorMessage>Provide a name for Objective</errorMessage>
</ValidationRule>