force-app/main/default/objects/Objective__c/validationRules/Valid_data.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_data</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Start date must be less than deadline</errorMessage>
</ValidationRule>